--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# eclipse
+# Eclipse
+eclipse
 bin
 *.launch
 .settings
@@ -6,33 +7,16 @@ bin
 .classpath
 .project
 
-# IntelliJ
+# IntelliJ Idea
 out
 *.ipr
 *.iws
 *.iml
 .idea
 
-# Compiled class file
-*.class
+# Gradle
+build
+.gradle
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Forge
+run
