--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ org.gradle.parallel = true
 org.gradle.caching = true
 
 # Mod Version
-# Versioning must follow Ragnarök versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
-mod_version = 0.1-Dev-1
+# Versioning must follow RagnarÃ¶k versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
+mod_version = 0.1-Dev-2
