--- a/build.gradle
+++ b/build.gradle
@@ -21,19 +21,34 @@ minecraft {
     mappings = 'stable_39'
     runDir = 'run'
 
-    def args = ['-Dforge.logging.console.level=debug']
+    def args = ['-Dfml.coreMods.load=com.paneedah.weaponlib.core.WeaponlibCorePlugin', '-Dforge.logging.console.level=debug']
 
     replace('@VERSION@', project.mod_version)
     replaceIn('ModReference.java')
+}
+
+runClient {
+    args '--username=ModernDev'
 }
 
 // Replace version in `mcmod.info`
 processResources {
     duplicatesStrategy 'include'
 
+    inputs.property 'version', version
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-        expand 'version': project.mod_version
+        expand 'version': version
+    }
+
+    from ('src/main/java') {
+        include '**/*.png'
+
+        include '**/*.json'
+
+        include '**/*.vsh'
+
+        include '**/*.fsh'
     }
 }
 
@@ -43,25 +58,19 @@ configurations {
     compile.extendsFrom(embed)
 }
 
-repositories{
-    maven {
-        name 'GeckoLib'
-        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven'
-    }
-}
-
 dependencies {
-    implementation 'software.bernie.geckolib:geckolib-forge-1.12.2:3.0.31'
-
     implementation 'net.jafama:jafama:2.+'
     embed 'net.jafama:jafama:2.+'
 }
 
 jar {
-    // Add all embedded dependencies into the jar
+    // Add all embedded dependencies into MWC jar
     from(configurations.embed.collect {it.isDirectory() ? it : zipTree(it)})
 
     manifest.attributes([
             'ModSide': 'BOTH',
+            'FMLCorePlugin': 'com.paneedah.weaponlib.core.WeaponlibCorePlugin',
+            'FMLCorePluginContainsFMLMod': 'true',
+            'ForceLoadAsMod': 'true'
     ])
 }
