Automatically Mark Some Folders As Excluded
Like that you don't need to manually mark them as excluded to have your search in file or replace in file polluted by random occurrence in logs etc...

--- a/build.gradle
+++ b/build.gradle
@@ -74,3 +74,9 @@ jar {
             'ForceLoadAsMod': 'true'
     ])
 }
+
+idea {
+    module {
+        excludeDirs = [file(".github"), file(".gradle"), file(".idea"), file("build"), file("gradle"), file("run")]
+    }
+}
