"Freed the Items from the CompatLayer!"
-> Changed names from MwItems/MwBlocks/MwRecipes to MWCItems/MWCBlocks/MWCRecipes

- Raeilgun (Azurae)

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ minecraft {
 }
 
 runClient {
-    args '--username=ModernDev'
+    args '--username=Azurae'
 }
 
 // Replace version in `mcmod.info`
