fixes + revert ver bump

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ minecraft {
 }
 
 runClient {
-    args '--username=Player1'
+    args '--username=ModernDev'
 }
 
 // Replace version in `mcmod.info`
