--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ org.gradle.parallel = true
 # Allow Gradle to cache build to avoid recompiling classes that did not change.
 org.gradle.caching = true
 
-# Mod Version
-# Versioning must follow RagnarÃ¶k versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
-mod_version = 0.1-Dev-7
+# Mod Constants
+# Versioning must follow Ragnarök versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
+id = mwc
+name = Modern Warfare Cubed
+version = 0.1-Dev-7
