--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 // Add version to the jar name
-version project.mod_version
+version project.version
 
 minecraft {
     version = '1.12.2-14.23.5.2847'
