Updated Red Core

--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'Red-Studio-Ragnarok:Red-Core:0.1.1@jar'
+    implementation 'Red-Studio-Ragnarok:Red-Core:0.2-Dev-2@jar'
 
     implementation 'net.jafama:jafama:2.+'
     embed 'net.jafama:jafama:2.+'
