Testing this out possibly

--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -5844,6 +5844,17 @@
       ]
     },
     {
+      "entryName": "mwc:DesertEagleMag",
+      "craftingGroup": "MAGAZINE",
+      "recipe": [
+        {
+          "entryName": "mwc:gunmetal_ingot",
+          "isOreDictionary": false,
+          "count": 1
+        }
+      ]
+    },
+    {
       "entryName": "mwc:M4A1Mag_2",
       "craftingGroup": "MAGAZINE",
       "recipe": [
