--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ jar {
 
     manifest.attributes([
             'ModSide': 'BOTH',
+            'FMLAT': 'mwc_at.cfg',
             'FMLCorePlugin': 'com.paneedah.weaponlib.core.WeaponlibCorePlugin',
             'FMLCorePluginContainsFMLMod': 'true',
             'ForceLoadAsMod': 'true'
