--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -22,6 +22,27 @@
       ]
     },
     {
+      "entryName": "mwc:m1014",
+      "craftingGroup": "GUN",
+      "recipe": [
+        {
+          "entryName": "mwc:synthetic_polymer_composite",
+          "isOreDictionary": false,
+          "count": 8
+        },
+        {
+          "entryName": "mwc:gunmetal_plate",
+          "isOreDictionary": false,
+          "count": 12
+        },
+        {
+          "entryName": "mwc:steel_ingot",
+          "isOreDictionary": false,
+          "count": 3
+        }
+      ]
+    },
+    {
       "entryName": "mwc:aac_honey_badger",
       "craftingGroup": "GUN",
       "recipe": [
