Removed enableAmmoCounter as of a crash that happens when you disable it It will be fixed In a future version
Took 39 minutes

--- a/src/main/resources/mwc.cfg
+++ b/src/main/resources/mwc.cfg
@@ -30,7 +30,7 @@
 	<gui statusBarPosition="TOP_RIGHT" />
 	
 	<ai>
-    <entity name="bandit1" health="1.0" spawn="0.0">
+    <entity name="terrorist" health="1.0" spawn="0.0">
       <!-- <equipment id="VSSVintorez" weight="0.1">
         <attachment id="VSSVintorezMag"/>
       </equipment>
