--- a/settings.gradle
+++ b/settings.gradle
@@ -6,8 +6,8 @@ pluginManagement {
             url = uri('http://jenkins.usrv.eu:8081/nexus/content/groups/public/')
             allowInsecureProtocol = true
             mavenContent {
-                includeGroup 'com.gtnewhorizons'
-                includeGroup 'com.gtnewhorizons.retrofuturagradle'
+                includeGroup('com.gtnewhorizons')
+                includeGroup('com.gtnewhorizons.retrofuturagradle')
             }
         }
         gradlePluginPortal()
