--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ org.gradle.parallel = true
 org.gradle.caching = true
 
 # Mod Constants
-# Versioning must follow Ragnarök versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
+# Versioning must follow Ragnarök versioning convention: https://shor.cz/ragnarok_versioning_convention
 id = mwc
 version = 0.1-Dev-12
